base/nginx/linds-virtualserver.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linds-docker-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: proxy.linds.com.au
      http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: linds-docker
                port:
                  number: 7878
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: linds-docker
                port:
                  number: 8989
          - path: /jackett
            pathType: Prefix
            backend:
              service:
                name: linds-docker
                port:
                  number: 9117
          - path: /bazarr
            pathType: Prefix
            backend:
              service:
                name: linds-docker
                port:
                  number: 6767
          - path: /tautulli
            pathType: Prefix
            backend:
              service:
                name: linds-docker-tautulli
                port:
                  number: 8181
  tls:
    - hosts:
        - proxy.linds.com.au
      secretName: linds-docker-ingress-tls
