base/nginx/tautulli-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tautulli.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linds-docker-tautulli
                port:
                  number: 8181
  tls:
    - hosts:
        - tautulli.linds.com.au
      secretName: tautulli-linds-com-au-tls
